# kucoin

./: .env.backup  .env.example  .gitignore  API_CREDENTIALS_CONFIGURED.md  API_IMPLEMENTATION_PLAN.md  CI_STATUS.md  Cargo.toml  GITHUB_ACTIONS_STATUS.md  KUCOIN_API_FORENSIC_ANALYSIS.md  PHASE2_COMPLETE.md  README.md
.cursor/: settings.json
.github/workflows/: build.yml  ci.yml  deploy.yml  rust-build.yml  test-secrets.yml
ai-models/: export_onnx.py  train_ensemble.py
ai-models/data/: preprocessor.py
ai-models/models/: lstm.py  transformer.py  xgboost_model.py
docker/: Dockerfile.bot  Dockerfile.frontend  docker-compose.yml
docs/: ADAPTIVE_OPTIMIZER.md  COOLDOWN_MONITORING_SYSTEM.md  KUCOIN_API_COMPLIANCE.md  KUCOIN_WEBSOCKET_FORENSIC_ANALYSIS.md  MARKET_SCANNER_OPTIMIZATION.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION.md  PRODUCTION_READINESS_REPORT.md  RATE_LIMIT_IMPLEMENTATION_SUMMARY.md  STREAMING_SYSTEM.md  ULTIMATE-INTEGRATION-GUIDE.md  ULTIMATE_INTEGRATION_COMPLETE.md  UNIFIED_RATE_CONTROLLER.md  aws-setup.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  stub.ts
scripts/: config.sh  deploy-phase2.sh  deploy-simple.sh  deploy.sh  health-check.sh  rollback.sh  validate_production.sh  validate_production_simple.sh  validate_websocket_config.sh
src/: main.rs  main.rs.backup
src/ai/: consensus.rs  features.rs  mod.rs  models.rs
src/api/: adaptive_scheduler.rs  kucoin.rs  mod.rs  rate_limiter.rs  types.rs  unified_rate_controller.rs  websocket.rs
src/core/: adaptive_optimizer.rs  (+5 more)
tests/: streaming_stress_test.rs
(+40 files in other folders)
